--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
         <title>Clima</title>
     </head>
     <body>
+        <header id="busca">
+            <form action="">
+                <label for="cidade">Cidade:</label>
+                <input type="text" name="cidade" id="cidade" placeholder="Cidade.." required />
+                <label for="cidade">UF:</label>
+                <input type="text" name="uf" id="uf" placeholder="SP / RJ / MG" required />
+
+                <button id="buscar" type="button">Buscar</button>
+            </form>
+        </header>
+
         <script src="./assets/js/script.js"></script>
     </body>
 </html>
