--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
         <link rel="stylesheet" href="./assets/css/style.css" />
         <title>Clima</title>
     </head>
@@ -12,12 +13,15 @@
             <form action="">
                 <label for="cidade">Cidade:</label>
                 <input type="text" name="cidade" id="cidade" placeholder="Cidade.." required />
-                <label for="cidade">UF:</label>
+                <label for="uf">UF:</label>
                 <input type="text" name="uf" id="uf" placeholder="SP / RJ / MG" required />
 
                 <button id="buscar" type="button">Buscar</button>
             </form>
         </header>
+        <main>
+            <section id="secao_principal"></section>
+        </main>
 
         <script src="./assets/js/script.js"></script>
     </body>
