--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <label for="uf">UF:</label>
                 <input type="text" name="uf" id="uf" placeholder="SP / RJ / MG" required />
 
-                <button id="buscar" type="button">Buscar cidade</button>
+                <button id="buscar" type="button">Buscar</button>
             </form>
         </header>
         <main>
